# xlm-ens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PR_MESSAGE.md  RATE_LIMITING_CHANGES.md  RATE_LIMITING_CODE_WALKTHROUGH.md  RATE_LIMITING_DEPLOYMENT_GUIDE.md  RATE_LIMITING_IMPLEMENTATION.md  RATE_LIMITING_QUICK_REFERENCE.md  RATE_LIMITING_STATUS.md  README.md  README_RATE_LIMITING.md  cliff.toml
cli/: Cargo.toml
cli/src/: config.rs  error.rs  export.rs  main.rs  output.rs  signer.rs
cli/src/commands/: auction.rs  bridge.rs  bulk.rs  completions.rs  config.rs  healthcheck.rs  migrate.rs  migrate_tests.rs  mod.rs  nft.rs  portfolio.rs  quote.rs  register.rs  renew.rs  resolve.rs  reverse.rs  subdomain.rs  text.rs  transfer.rs  validate.rs  watch.rs  whois.rs
cli/tests/: e2e.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: events.rs  lib.rs  test.rs
contracts/nft/test_snapshots/test/tests/: approval_changes_do_not_change_enumeration_queries.1.json  enumerates_global_and_owner_tokens_across_multiple_mints.1.json  enumeration_consistent_after_approved_transfer.1.json  enumeration_consistent_after_owner_transfer.1.json  invariants_hold_after_mint_approve_transfer_sequence.1.json  no_op_self_transfer_does_not_duplicate_owner_token.1.json  no_op_transfer_to_same_owner_is_idempotent_and_keeps_invariants.1.json  rejects_duplicate_mint_for_existing_token_id.1.json  rejects_transfer_from_unauthorized_caller.1.json  stores_approval_and_allows_approved_transfer.1.json  stores_metadata_and_query_methods_after_mint.1.json  test_approve_clear_emits_event.1.json  test_approve_emits_event.1.json  test_mint_emits_event.1.json  test_transfer_from_emits_event.1.json  test_transfer_owner_emits_event.1.json  updates_query_methods_after_owner_transfer.1.json
contracts/registrar/: Cargo.toml
contracts/registrar/src/: expiry.rs  lib.rs  pricing.rs  test.rs
contracts/registrar/test_snapshots/test/tests/: accounting_report_matches_fee_metrics.1.json  can_register_up_to_limit_within_window.1.json  different_addresses_have_independent_rate_limits.1.json  fee_metrics_track_operations.1.json  get_registrations_in_window_returns_count.1.json  quote_renewal_reports_current_and_extended_expiry.1.json  rate_limit_config_initialized_with_defaults.1.json  rate_limit_events_emitted_on_limit_exceeded.1.json  rate_limit_exceeded_on_sixth_registration_in_window.1.json  register_emits_registered_event.1.json  registration_fails_on_insufficient_payment.1.json  registrations_outside_window_do_not_count_toward_limit.1.json  remove_whitelist_applies_rate_limit.1.json  renew_emits_renewed_event.1.json  (+12 more)
contracts/subdomain/: Cargo.toml
contracts/subdomain/src/: lib.rs  test.rs
tests/: Cargo.toml  fuzz_validate_label.rs
tests/benches/: storage_benchmarks.rs
tests/integration/: auction_test.rs  bridge_test.rs  bulk_test.rs  concurrent_registration_test.rs  registrar_registry_test.rs  registrar_test.rs  registry_errors_test.rs  registry_nft_test.rs  registry_test.rs  subdomain_test.rs  watch_test.rs
tests/test_snapshots/: bench_registry_register_renew_transfer.1.json  bench_resolver_set_record_mutation.1.json  renewal_during_grace_period.1.json  renewal_syncs_expiry_and_grace_with_registry.1.json  subdomain_flow_covers_controller_delegation_transfer_and_resolution.1.json  test_transfer_invalidates_resolver_authority.1.json  unauthorized_renewal_fails.1.json
tests/test_snapshots/registrar_registry_integration/: expiry_and_grace_values_match_after_registration.1.json  full_registration_path_multi_year.1.json  registration_fails_if_name_already_taken.1.json  registration_materialises_registry_ownership.1.json  renewal_after_grace_period_fails_cross_contract.1.json  renewal_at_exact_expiry_succeeds_cross_contract.1.json  renewal_inside_grace_period_succeeds_cross_contract.1.json  renewal_updates_registry_expiry_and_grace.1.json
(+113 files in other folders)
