[package]
name = "xlm-ns-nft"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "=26.0.0-rc.1", features = ["testutils"] }
xlm-ns-registry = { path = "../../contracts/registry" }
